update snap package

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: nginx-hda-bundle
-version: "1.15.12"
+version: "1.17.0"
 summary: Nginx HDA Bundle - Dynamic Modules Power
 description: "For more details please visit: https://github.com/cryptofuture/nginx-hda-bundle/"
 
@@ -72,9 +72,9 @@ parts:
             echo 'Preparing build'
             echo "deb-src http://ppa.launchpad.net/maxmind/ppa/ubuntu bionic main " >> /etc/apt/sources.list
             echo "deb http://ppa.launchpad.net/maxmind/ppa/ubuntu bionic main " >> /etc/apt/sources.list
-            apt-key adv --keyserver keyserver.ubuntu.com --keyserver-options http-proxy=http://157.230.244.41:3128/ --recv-keys DE1997DCDE742AFA
+            apt-key adv --keyserver keyserver.ubuntu.com --recv-keys DE1997DCDE742AFA
             apt update
-        source: nginx-1.15.12.tar.gz
+        source: nginx-1.17.0.tar.gz
         build-packages:
             - libgd-dev
             - libgeoip-dev
